--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -14,6 +14,39 @@
         "language": "json"
       }
     ],
+    "x-azResources": {
+      "azure": {
+        "branches": [
+          {
+            "type": "LogicApp"
+          }
+        ]
+      },
+      "workspace": {
+        "branches": [
+          {
+            "type": "func"
+          }
+        ],
+        "resources": true
+      },
+      "commands": [
+        {
+          "command": "azureLogicAppsStandard.createLogicApp",
+          "title": "Create Logic App in Azure...",
+          "type": "microsoft.web/sites",
+          "detail": "To create and run automated workflows with little to no code"
+        }
+      ],
+      "activation": {
+        "onFetch": [
+          "microsoft.web/sites"
+        ],
+        "onResolve": [
+          "microsoft.web/sites"
+        ]
+      }
+    },
     "commands": [
       {
         "command": "azureLogicAppsStandard.openDesigner",
@@ -322,27 +355,27 @@
         },
         {
           "command": "azureLogicAppsStandard.deploy",
-          "when": "view == azureResourceGroups && viewItem == azLogicAppsProductionSlot",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicAppsProductionSlot/",
           "group": "3@1"
         },
         {
           "command": "azureLogicAppsStandard.deploySlot",
-          "when": "view == azureResourceGroups && viewItem == azLogicAppsSlot",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicAppsSlot/",
           "group": "3@2"
         },
         {
           "command": "azureLogicAppsStandard.startLogicApp",
-          "when": "view == azureResourceGroups && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/",
           "group": "2@1"
         },
         {
           "command": "azureLogicAppsStandard.stopLogicApp",
-          "when": "view == azureResourceGroups && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/",
           "group": "2@2"
         },
         {
           "command": "azureLogicAppsStandard.restartLogicApp",
-          "when": "view == azureResourceGroups && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/",
           "group": "2@3"
         },
         {
@@ -367,7 +400,7 @@
         },
         {
           "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem =~ /^deployments(C|Unc)onnected$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps.*(deployments(C|Unc)onnected)/",
           "group": "2@1"
         },
         {
@@ -387,17 +420,22 @@
         },
         {
           "command": "azureLogicAppsStandard.redeploy",
-          "when": "view == azureWorkspace && viewItem =~ /^deployment\\//",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps.*deployment\\//",
           "group": "1@2"
         },
         {
           "command": "azureLogicAppsStandard.openInPortal",
-          "when": "view == azureResourceGroups && viewItem =~ /^deployment\\//",
+          "when": "view == azureResourceGroups && viewItem =~ /Remote;.*;Workflow;/i",
+          "group": "2@2"
+        },
+        {
+          "command": "azureLogicAppsStandard.openInPortal",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps.*deployment\\//",
           "group": "1@3"
         },
         {
           "command": "azureLogicAppsStandard.browseWebsite",
-          "when": "view == azureWorkspace && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/",
           "group": "1@2"
         },
         {
@@ -497,7 +535,7 @@
         },
         {
           "command": "azureLogicAppsStandard.configureDeploymentSource",
-          "when": "view == azureWorkspace && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/",
           "group": "3@2"
         }
       ],
