--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -35,7 +35,7 @@
           "command": "azureLogicAppsStandard.createLogicApp",
           "title": "Create Logic App in Azure...",
           "type": "microsoft.web/sites",
-          "detail": "To create and run automated workflows with little to no code"
+          "detail": "To create and run automated workflows with little to no code."
         }
       ],
       "activation": {
@@ -379,43 +379,43 @@
           "group": "2@3"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == azLogicAppsSlots",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == azLogicAppsSlots",
           "group": "2@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem =~ /Workflows;/i",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem =~ /Workflows;/i",
           "group": "1@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == applicationSettings",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == applicationSettings",
           "group": "2@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == azFuncProxies",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == azFuncProxies",
           "group": "1@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
+          "command": "azureResourceGroups.refresh",
           "when": "view == azureResourceGroups && viewItem =~ /azLogicApps.*(deployments(C|Unc)onnected)/",
           "group": "2@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == siteFiles",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == siteFiles",
           "group": "1@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == logFiles",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == logFiles",
           "group": "1@1"
         },
         {
-          "command": "azureLogicAppsStandard.refresh",
-          "when": "view == azureWorkspace && viewItem == folder",
+          "command": "azureResourceGroups.refresh",
+          "when": "view == azureResourceGroups && viewItem == folder",
           "group": "1@1"
         },
         {
@@ -480,42 +480,42 @@
         },
         {
           "command": "azureLogicAppsStandard.toggleAppSettingVisibility",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettingItem.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettingItem",
           "group": "inline"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.add",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettings.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettings",
           "group": "1@1"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.delete",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettingItem.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettingItem",
           "group": "1@3"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.download",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettings.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettings",
           "group": "1@2"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.edit",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettingItem.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettingItem",
           "group": "1@1"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.rename",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettingItem.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettingItem",
           "group": "1@2"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.toggleSlotSetting",
-          "when": "view == azureResourceGroups && viewItem =~ /applicationSettingItem.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettingItem",
           "group": "1@4"
         },
         {
           "command": "azureLogicAppsStandard.appSettings.upload",
-          "when": "view == azureWorkspace && viewItem =~ /applicationSettings.*azLogicApps/",
+          "when": "view == azureResourceGroups && viewItem == applicationSettings",
           "group": "1@3"
         },
         {
@@ -530,7 +530,7 @@
         },
         {
           "command": "azureLogicAppsStandard.startRemoteDebug",
-          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot/ && config.azureLogicAppsStandard.enableRemoteDebugging == true",
+          "when": "view == azureResourceGroups && viewItem =~ /azLogicApps(Production|)Slot(?!s)/ && config.azureLogicAppsStandard.enableRemoteDebugging == true",
           "group": "5@1"
         },
         {
