--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -20,8 +20,7 @@ on:
 env:
   AI_KEY: 3cf0d6ae-3327-414a-b7c1-12f31ef45eff
   NX_AI_CON_STR: InstrumentationKey=3cf0d6ae-3327-414a-b7c1-12f31ef45eff;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/
-  RELEASE_TYPE: ${{ github.event.inputs.release_type || 'patch' }}
-  BUMP_COMMAND: npm run bump -- --release-as ${{ env.RELEASE_TYPE }}
+  BUMP_COMMAND: npm run bump -- --release-as ${{ github.event.inputs.release_type || 'patch' }}
 
 jobs:
   bump-version:
