--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -40,7 +40,7 @@ jobs:
       - run: npm ci
 
       - name: 'Version Bump'
-        run: git config --global user.email $GITHUB_ACTOR && git config --global user.name release-automation-${GITHUB_ACTOR}@microsoft.com && ${{ BUMP_COMMAND }} && npm install
+        run: git config --global user.email $GITHUB_ACTOR && git config --global user.name release-automation-${GITHUB_ACTOR}@microsoft.com && ${{ env.BUMP_COMMAND }} && npm install
 
       - name: Push changes
         uses: ad-m/github-push-action@master
@@ -67,7 +67,7 @@ jobs:
       - run: npm ci
 
       - name: 'Local Version Bump'
-        run: ${{ BUMP_COMMAND }} -- --skip.commit --skip.tag
+        run: ${{ env.BUMP_COMMAND }} -- --skip.commit --skip.tag
 
       - name: 'Set DM VSIX aiKey in package.json'
         run: echo "`jq '.aiKey="${{ env.AI_KEY }}"' apps/vs-code-data-mapper/src/package.json`" > apps/vs-code-data-mapper/src/package.json
@@ -129,7 +129,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - name: 'Local Version Bump'
-        run: ${{ BUMP_COMMAND }} -- --skip.commit --skip.tag
+        run: ${{ env.BUMP_COMMAND }} -- --skip.commit --skip.tag
       - run: npm ci
       - run: npx nx build ${{ matrix.lib.package }}
       - name: Use .npmrc
