--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -67,7 +67,7 @@ jobs:
       - run: npm ci
 
       - name: 'Local Version Bump'
-        run: ${{ env.BUMP_COMMAND }} -- --skip.commit --skip.tag
+        run: ${{ env.BUMP_COMMAND }} --skip.commit --skip.tag
 
       - name: 'Set DM VSIX aiKey in package.json'
         run: echo "`jq '.aiKey="${{ env.AI_KEY }}"' apps/vs-code-data-mapper/src/package.json`" > apps/vs-code-data-mapper/src/package.json
@@ -129,7 +129,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - name: 'Local Version Bump'
-        run: ${{ BUMP_COMMAND }} -- --skip.commit --skip.tag
+        run: ${{ env.BUMP_COMMAND }} --skip.commit --skip.tag
       - run: npm ci
       - run: npx nx build ${{ matrix.lib.package }}
       - name: Use .npmrc
