--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -80,10 +80,8 @@
         "command": "azureLogicAppsStandard.deploy",
         "title": "Deploy to Logic App...",
         "category": "Azure Logic Apps",
-        "icon": {
-          "light": "assets/light/deploy.svg",
-          "dark": "assets/dark/deploy.svg"
-        }
+        "icon": "$(cloud-upload)",
+        "enablement": "!virtualWorkspace"
       },
       {
         "command": "azureLogicAppsStandard.deploySlot",
@@ -300,6 +298,13 @@
       }
     ],
     "menus": {
+      "azureWorkspaceDeploy": [
+        {
+          "command": "azureLogicAppsStandard.deploy",
+          "when": "view == azureWorkspace",
+          "group": "navigation@1"
+        }
+      ],
       "view/title": [
         {
           "command": "azureLogicAppsStandard.createNewProject",
@@ -310,11 +315,6 @@
           "command": "azureLogicAppsStandard.createCodeless",
           "when": "view == azureWorkspace",
           "group": "navigation@2"
-        },
-        {
-          "command": "azureLogicAppsStandard.deploy",
-          "when": "view == azureWorkspace",
-          "group": "navigation@3"
         },
         {
           "command": "azureLogicAppsStandard.exportLogicApp",
