--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -297,6 +297,16 @@
         "command": "azureLogicAppsStandard.reportIssue",
         "title": "Report Issue...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "azureLogicAppsStandard.installDotNetSDK",
+        "title": "Install .NET SDK 6",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "azureLogicAppsStandard.uninstallDotNetSDK",
+        "title": "Uninstall .NET SDK 6",
+        "category": "Azure Logic Apps"
       }
     ],
     "menus": {
