--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -68,6 +68,15 @@
         }
       },
       {
+        "command": "azureLogicAppsStandard.createNewCodeProject",
+        "title": "Create New Code Project...",
+        "category": "Azure Logic Apps",
+        "icon": {
+          "light": "assets/light/CreateNewCodeProject.svg",
+          "dark": "assets/dark/CreateNewCodeProject.svg"
+        }
+      },
+      {
         "command": "azureLogicAppsStandard.createCodeless",
         "title": "Create Workflow...",
         "category": "Azure Logic Apps",
@@ -309,6 +318,11 @@
         {
           "command": "azureLogicAppsStandard.createNewProject",
           "when": "view == azureWorkspace",
+          "group": "navigation@1"
+        },
+        {
+          "command": "azureLogicAppsStandard.createNewCodeProject",
+          "when": "view == azureWorkspace && isWindows",
           "group": "navigation@1"
         },
         {
@@ -592,6 +606,10 @@
           "when": "resourceFilename==workflow.json"
         },
         {
+          "command": "azureLogicAppsStandard.createNewCodeProject",
+          "when": "isWindows"
+        },
+        {
           "command": "azureLogicAppsStandard.viewContent",
           "when": "never"
         },
@@ -755,6 +773,7 @@
     "onCommand:azureLogicAppsStandard.openDesigner",
     "onCommand:azureLogicAppsStandard.viewContent",
     "onCommand:azureLogicAppsStandard.createNewProject",
+    "onCommand:azureLogicAppsStandard.createNewCodeProject",
     "onCommand:azureLogicAppsStandard.createCodeless",
     "onCommand:azureLogicAppsStandard.deploy",
     "onCommand:azureLogicAppsStandard.deploySlot",
