--- a/.github/workflows/Deploy-Documentation.yml
+++ b/.github/workflows/Deploy-Documentation.yml
@@ -7,10 +7,10 @@ on:
   push:
     branches:
       - main
-#   pull_request:
-#     types: [opened, synchronize, reopened, closed, labeled]
-#     branches:
-#       - main
+  pull_request:
+    types: [opened, synchronize, reopened, closed, labeled]
+    branches:
+      - main
 
 jobs:
   build_and_deploy_job:
