Update actions to trigger on PR for dev/* branches

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test Runner
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev/*]
   pull_request:
-    branches: [main]
+    branches: [main, dev/*]
 jobs:
   build:
     runs-on: ubuntu-latest
