--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: 'CodeQL'
 
 on:
   push:
-    branches: [main, dev/*]
+    branches: [main, dev/*, hotfix/*]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [main, dev/*]
+    branches: [main, dev/*, hotfix/*]
   schedule:
     - cron: '30 21 * * 3'
 
