--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test Runner
 
 on:
   push:
-    branches: [main, dev/*]
+    branches: [main, dev/*, hotfix/*]
   pull_request:
-    branches: [main, dev/*]
+    branches: [main, dev/*, hotfix/*]
 jobs:
   build:
     runs-on: ubuntu-latest
