feat(vscode): Added .NET SDK dependency commands (#2412)
* dotnet latest/update

* dotnet platform install

* Register install/uninstal dotnet commands

* cleanup

* Revert package-lock

* PR Feedback + PackageManagerCheck

* +mac/linux defaults

* Linux .net sdk

* Linux Fix

* try/catch missing packagemanager

* localize messageItem

* Revert Package-lock

---------

Co-authored-by: Alan Kai <alankai@microsoft.com>

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -295,6 +295,16 @@
         "command": "azureLogicAppsStandard.reportIssue",
         "title": "Report Issue...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "azureLogicAppsStandard.installDotNetSDK",
+        "title": "Install or Update .NET SDK 6",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "azureLogicAppsStandard.uninstallDotNetSDK",
+        "title": "Uninstall .NET SDK 6",
+        "category": "Azure Logic Apps"
       }
     ],
     "menus": {
@@ -692,6 +702,16 @@
             "description": "Show a warning if multiple installs of Azure Functions Core Tools are detected.",
             "default": true
           },
+          "azureLogicAppsStandard.validateDotNetSDK": {
+            "type": "boolean",
+            "description": "Validate the .Net SDK 6 is installed before debugging.",
+            "default": true
+          },
+          "azureLogicAppsStandard.showDotNetSDKWarning": {
+            "type": "boolean",
+            "description": "Show a warning if your installed version of .NET SDK 6 is out-of-date.",
+            "default": true
+          },
           "azureLogicAppsStandard.requestTimeout": {
             "type": "number",
             "description": "The timeout (in seconds) to be used when making requests, for example getting the latest templates.",
@@ -739,6 +759,20 @@
           "azureLogicAppsStandard.showTargetFrameworkWarning": {
             "type": "boolean",
             "description": "Show a warning when an Azure Functions .NET project was detected that has mismatched target frameworks.",
+            "default": true
+          },
+          "azureLogicAppsStandard.PlatformPackageManager": {
+            "type": "string",
+            "enum": [
+              "winget",
+              "brew",
+              "wget"
+            ],
+            "description": "Package Manager across Operating System Platforms"
+          },
+          "azureLogicAppsStandard.showMissingPackageManagerWarning": {
+            "type": "boolean",
+            "description": "Show a warning when an expected Package Manager is missing.",
             "default": true
           }
         }
