--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       }
     },
     {
-      "name": "Run Data Mapper Extension In Dev Mode",
+      "name": "Build, Run and Debug Data Mapper Extension In Dev Mode",
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
@@ -24,6 +24,16 @@
       "trace": false,
       "internalConsoleOptions": "openOnFirstSessionStart",
       "preLaunchTask": "npm: build:vscode-datamapper",
+      "outFiles": ["${workspaceFolder}/dist/apps/vs-code-data-mapper/*.js"]
+    },
+    {
+      "name": "Run Data Mapper Extension In Dev Mode",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}/dist/apps/vs-code-data-mapper"],
+      "trace": false,
+      "internalConsoleOptions": "openOnFirstSessionStart",
       "outFiles": ["${workspaceFolder}/dist/apps/vs-code-data-mapper/*.js"]
     }
   ]
