--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,17 @@
       }
     },
     {
+      "name": "Build, Run and Debug Data Mapper Extension In Dev Mode",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}/dist/apps/vs-code-data-mapper"],
+      "trace": false,
+      "internalConsoleOptions": "openOnFirstSessionStart",
+      "preLaunchTask": "npm: build:vscode-datamapper",
+      "outFiles": ["${workspaceFolder}/dist/apps/vs-code-data-mapper/*.js"]
+    },
+    {
       "name": "Run Data Mapper Extension In Dev Mode",
       "type": "extensionHost",
       "request": "launch",
@@ -23,7 +34,7 @@
       "args": ["--extensionDevelopmentPath=${workspaceFolder}/dist/apps/vs-code-data-mapper"],
       "trace": false,
       "internalConsoleOptions": "openOnFirstSessionStart",
-      "outFiles": ["${workspaceFolder}/dist/apps/vs-code-data-mapper"]
+      "outFiles": ["${workspaceFolder}/dist/apps/vs-code-data-mapper/*.js"]
     }
   ]
 }
