--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compile:loc": "formatjs compile-folder --ast --format ./format.js \"Localize/lang\" \"libs/services/intl/src/compiled-lang/\" ",
     "compile:loc:psuedo": "formatjs compile \"Localize/lang/strings.json\" --ast --format ./format.js --out-file \"libs/services/intl/src/compiled-lang/strings.en-XA.json\" --pseudo-locale en-XA",
     "build:designer-client-services": "nx run services-designer-client-services:build",
+    "build:chatbot": "nx run chatbot:build",
     "build:parsers": "nx run parsers:build",
     "build:vscode-react": "nx run vs-code-react:build",
     "build:vscode-designer": "nx run vs-code-designer:build && nx run vs-code-designer-react:build && nx run vs-code-react:build",
