--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -69,7 +69,7 @@
       },
       {
         "command": "azureLogicAppsStandard.createNewCodeProject",
-        "title": "Create workspace for custom logic app...",
+        "title": "Create new logic app workspace...",
         "category": "Azure Logic Apps",
         "preview": true,
         "icon": {
